added scroll-effects for section-contents

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -9,6 +9,7 @@
 @import "core/layout";
 @import "core/grid-scaffolding";
 @import "core/scaffolding";
+@import "core/scroll-effects";
 
 // general purpose components
 @import "components/headlines";
