added various versions of coco-gothic font

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -10,6 +10,7 @@
 @import "core/grid-scaffolding";
 @import "core/scaffolding";
 @import "core/scroll-effects";
+@import "core/fonts";
 
 // general purpose components
 @import "components/headlines";
