--- a/app/styles/components/headlines.scss
+++ b/app/styles/components/headlines.scss
@@ -5,6 +5,7 @@ h1, h2, h3, h4, h5 {
 .sy-headline {
   margin: 0;
   padding: 0;
+  font-family: 'Coco Gothic';
 }
 
 .sy-headline--section {
@@ -31,6 +32,8 @@ h1, h2, h3, h4, h5 {
 
   .sy-header__tagline {
     margin-top: 10px;
+    font-style: italic;
+    font-family: 'Coco Gothic';
   }
 }
 
