added static image instead of embedded google maps

--- a/app/partials/landingpage/office.html
+++ b/app/partials/landingpage/office.html
@@ -2,7 +2,10 @@
   <h2 class="sy-headline sy-headline--section">Office</h2>
 
   <div class="sy-section__content">
-    <div class="google-map"></div>
+    <a href="https://goo.gl/maps/oiTLtfp9LgR2" rel="noopener" target="_blank" class="sy-google-maps">
+      <img class="sy-image sy-image--full-width" alt="" src="../../assets/images/office-map.png">
+      <div class="sy-google-maps__info">In Google Maps öffnen</div>
+    </a>
     <div class="sy-spacer"></div>
 
     <div class="sy-grid sy-grid--two-cols">
