--- a/app/styles/landingpage/contact.scss
+++ b/app/styles/landingpage/contact.scss
@@ -3,6 +3,34 @@
   width: 100%;
 }
 
+.sy-google-maps {
+  position: relative;
+  display: block;
+  transition: transform .2s ease;
+
+  &:hover {
+    transform: scale(1.02);
+
+    > .sy-google-maps__info {
+      opacity: 1;
+    }
+  }
+
+  .sy-google-maps__info {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.3);
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: opacity .2s ease;
+  }
+}
+
 .sy-contact-form {
   position: relative;
 
