make everything coco

--- a/app/styles/landingpage/index.scss
+++ b/app/styles/landingpage/index.scss
@@ -4,6 +4,9 @@
 @import "navigation";
 @import "contact";
 
+* {
+  font-family: 'Coco Gothic';
+}
 
 // Push the content for those main section a little bit
 // in.
