--- a/app/styles/landingpage/services.scss
+++ b/app/styles/landingpage/services.scss
@@ -1,5 +1,6 @@
 .sy-services__headline {
-  font-weight:  map-get($font-weights, bold);
+  font-weight: 600;
+  font-size: 1.7rem;
 }
 
 .sy-services__item {
