--- a/app/styles/core/scroll-effects.scss
+++ b/app/styles/core/scroll-effects.scss
@@ -1,6 +1,6 @@
 .sy-section__content {
   transition: transform .1s ease, opacity .1s ease;
-  transform: scale(0.9);
+  transform: translateY(10px);
   opacity: 0.7;
 
   &.sy-section__content--visible {
@@ -9,7 +9,7 @@
 
   @keyframes make-visible {
     to {
-      transform: scale(1);
+      transform: translateY(0);
       opacity: 1;
     }
   }
