adjusted font-weight for links and added maps-link

--- a/app/partials/landingpage/office.html
+++ b/app/partials/landingpage/office.html
@@ -4,7 +4,7 @@
   <div class="sy-section__content">
     <a href="https://goo.gl/maps/oiTLtfp9LgR2" rel="noopener" target="_blank" class="sy-google-maps">
       <img class="sy-image sy-image--full-width" alt="" src="../../assets/images/office-map.png">
-      <div class="sy-google-maps__info">In Google Maps öffnen</div>
+      <div class="sy-google-maps__info">In Maps öffnen</div>
     </a>
     <div class="sy-spacer"></div>
 
@@ -19,7 +19,9 @@
       </div>
 
       <div class="sy-column">
-          In Google Maps öffnen
+        <a class="sy-link" href="https://goo.gl/maps/oiTLtfp9LgR2" rel="noopener" target="_blank">
+          In Maps öffnen
+        </a>
       </div>
     </div>
   </div>
