more reasonable intro-sizes on different screen-sizes

--- a/app/partials/landingpage/intro/large.html
+++ b/app/partials/landingpage/intro/large.html
@@ -1,6 +1,6 @@
 <div class="sy-intro-wrapper">
   <svg class="sy-intro__svg"
-    preserveAspectRatio="xMidYMid"
+    preserveAspectRatio="xMidYMid slice"
     viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
 
     <!-- Satellytes Logo -->
