--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -6,9 +6,10 @@ $grid-gutter-width: 30px;
 $grid-enable-classes: true;
 
 $font-weights: (
-  normal: 400,
-  medium: 600,
-  bold: 700
+  light: 200,
+  regular: 400,
+  bold: 600,
+  heavy: 800
 );
 
 $colors: (
