added white planet also to desktop-intro and added parallax-scroll-effect

--- a/app/partials/landingpage/intro/mobile.html
+++ b/app/partials/landingpage/intro/mobile.html
@@ -3,14 +3,16 @@
     preserveAspectRatio="xMidYMax slice"
     viewBox="0 0 100 190" xmlns="http://www.w3.org/2000/svg">
 
-    <!-- Planet -->
-    <g transform="translate(250, -80)">
-      <circle r="300" fill="#ffffff" />
-    </g>
+    <g class="sy-intro__planet">
+      <!-- Planet -->
+      <g transform="translate(150, -150)">
+        <circle r="300" fill="#ffffff" />
+      </g>
 
-    <!-- Satellyte -->
-    <g class="planet__orbiter">
-      <circle cx="29.5" cy="123.5" r="2" fill="#5CCFE6"/>
+      <!-- Satellyte -->
+      <g class="planet__orbiter">
+        <circle cx="32" cy="126" r="2" fill="#5CCFE6"/>
+      </g>
     </g>
 
     <!-- Satellytes Logo -->
