--- a/app/styles/landingpage/intro.scss
+++ b/app/styles/landingpage/intro.scss
@@ -29,7 +29,6 @@
 }
 
 .sy-intro__compact {
-
   display: block;
   width: 100%;
   height: 100%;
@@ -43,6 +42,7 @@
   display: none;
   width: 100%;
   height: 100%;
+
   @include media-breakpoint-up(sm) {
     display: block;
   }
@@ -52,18 +52,24 @@
   display: block;
   width: 100%;
   height: 100%;
+  overflow: visible;
 }
 
 @keyframes orbit {
   0% {
-    transform: rotateZ(30deg);
+    transform: rotateZ(10deg);
   }
   100% {
-    transform: rotateZ(-20deg);
+    transform: rotateZ(-25deg);
   }
 }
 
 .planet__orbiter {
-  transform-origin: 250px -80px;
+  transform-origin: 150px -150px;
   animation:  10s infinite linear orbit;
+}
+.sy-intro__large {
+  .planet__orbiter {
+    transform-origin: 800px -450px;
+  }
 }
