--- a/app/partials/landingpage/what.html
+++ b/app/partials/landingpage/what.html
@@ -1,18 +1,16 @@
 <section class="sy-section sy-landingpage__what" id="sy-what">
   <header class="sy-header">
-    <h2 class="sy-headline sy-headline--section">What we do</h2>
-    <span class="sy-header__tagline">We offer only what we’re truely great at ...</span>
+      <!--<span class="sy-header__tagline">WIR BIETEN NUR AN, WAS WIR BESONDERS GUT KÖNNEN.</span>-->
+      <h2 class="sy-headline sy-headline--section">Wir bieten nur an, was wir besonders gut können.</h2>
+
   </header>
 
   <div class="sy-section__content">
     <h3 class="sy-headline sy-headline--content">Full Stack Digital Services</h3>
     <p>
-      Satellytes is an agency that orbits around large enterprises and helps them built the greatest possible services and interfaces. With a y, because it’s cooler and the i was obviously already taken decades ago.
+      Bei SATELLYTES dreht sich alles um die Optimierung digitaler Services und Interfaces. Als Full-Stack-Agentur bieten wir Ihnen den gesamten Prozess von der Ideation bis zur Implementierung – vom ersten perfomanten Funnel bis zur letzten Zeile Code. Auf gut deutsch:
     </p>
 
-    <p>
-      We offer full stack digital services, starting as soon as somebody has a notion of what could possibly be a good idea to do until the last funnel or line of code is completed and as beautifully peformant as it can be.
-    </p>
   </div>
 
   <div class="sy-section__content">
@@ -20,55 +18,47 @@
       <div  class="sy-services__item">
         <h4 class="sy-services__headline">UX/UI</h4>
         <p class="sy-services__description">
-          Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus.
-        </p>
+          Mit rund 20 Jahren Erfahrung in der Konzeption und Umsetzung digitaler Interfaces kennen und können wir das gesamte Spektrum der User Experience (UX). Der kleine, sichtbare Teil davon ist das User Interface (UI), der große unsichtbare (UX) jedoch viel relevanter für die Erreichung ihrer wirtschaftlichen Ziele. Denn nur mit benutzerfreundlichen, leicht verständlichen Journeys über alle Endgeräte, Nutzergruppen und Nutzungskontexte hinweg, erreichen die User – und somit Sie – ihr Ziel.
+          </p>
       </div>
 
       <div  class="sy-services__item">
         <h4 class="sy-services__headline">Frontend</h4>
         <p class="sy-services__description">
-          Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus.
+          Unsere Lieblingsdings sind ... aber wir sind stets hungrig neue ... zu testen und uns anzueignen. Was immer das Beste für das Projekt ist ... und so weiter.
         </p>
       </div>
 
       <div  class="sy-services__item">
         <h4 class="sy-services__headline">Backend</h4>
         <p class="sy-services__description">
-          Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus.
+          Ohne einem ordentlichen Fundament ... Dazu beraten und realisieren wir ... und so weiter.
         </p>
       </div>
 
       <div  class="sy-services__item">
-        <h4 class="sy-services__headline">Service Development & Strategy</h4>
+        <h4 class="sy-services__headline">Service Development</h4>
         <p class="sy-services__description">
-          Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus.
-        </p>
+          Oft versuchen Unternehmen ihre analogen Services eins zu eins zu digitalisieren. Oder sie orientieren sich am Wettbewerb und wollen alles was die anderen auch haben – nur um auf Nummer Sicher zu gehen. Vielleicht ist das aber gar nicht das, was ihre Nutzer wollen. Wir gehen gerne mit Ihnen den Weg ab dem ersten Schritt und erarbeiten Services, die zu Ihren KPIs und Kunden passen.        </p>
       </div>
     </div>
   </div>
 
   <div class="sy-section__content">
-    <h3 class="sy-headline sy-headline--content">What others do better</h3>
+    <h3 class="sy-headline sy-headline--content">Das können andere besser</h3>
     <p>
-        SEM, XR, E-Commerce, Marketing, simple websites and a lot of other stuff, but we built a vivid and broad network of freelancers and agencies over the last two decades which we always did great jobs with.
-    </p>
+      SEM, XR, E-Commerce, Werbung, Marketing, einfache Websites und vieles mehr. Durch unser breites und zuverlässges Netzwerk an Freelancern und Agenturen finden wir aber für alle Ihre Ansprüche immer eine perfekte Lösung. Beauftragen Sie uns und wir stellen Ihnen vollkommen transparent ein passendes Team zusammen.    </p>
   </div>
 
   <div class="sy-section__content">
-    <h3 class="sy-headline sy-headline--content">Who we work for</h3>
-    <p>
-        SEM, XR, E-Commerce, Marketing, simple websites and a lot of other stuff, but we built a vivid and broad network of freelancers and agencies over the last two decades which we always did great jobs with.
-    </p>
-  </div>
-  <div class="sy-section__content">
+    <h3 class="sy-headline sy-headline--content">Unsere Kunden</h3>
     <img class="sy-image" alt="" src="../../assets/images/clients.svg">
   </div>
 
   <div class="sy-section__content">
-      <h3 class="sy-headline sy-headline--content">and many more:</h3>
+      <h3 class="sy-headline sy-headline--content">Und viele weiter:</h3>
     <p>
-        All of us have a long history in freelancing which started in 1998 and realized major projects for clients like:
-        Mercedes-Benz, Audi, MINI, Coca-Cola, Vitra, Swarovski, Glamour, Montblanc, O2, T-Mobile, Deutsche Post, P&S Reemtsma, Bacardi, Bogner, Siemens, Siemens Mobile, T-Online, Pritt, BMW, Mazda, Constantin Film, Esprit, etc.
+      Unsere Mitarbeiter haben vor ihrer Karriere bei Satellytes viele Jahre in anderen Agenturen oder als Freelancer gearbeitet. In dieser Zeit wurden Launches, Relaunches oder andere Großprojekte realisiert. Unter anderem für Kunden wie: Mercedes-Benz, Audi, MINI, Coca-Cola, Vitra, Swarovski, Glamour, Montblanc, O2, T-Mobile, Deutsche Post, P&S Reemtsma, Bacardi, Bogner, Siemens, Siemens Mobile, T-Online, Pritt, BMW, Mazda, Constantin Film, Esprit, etc.
     </p>
   </div>
 
