--- a/app/partials/landingpage/why-us.html
+++ b/app/partials/landingpage/why-us.html
@@ -1,20 +1,30 @@
 <section class="sy-section sy-landingpage__why" id="sy-why">
   <header class="sy-header">
     <h2 class="sy-headline sy-headline--section">Why us</h2>
-    <span class="sy-header__tagline">We’re on your side – and the customer’s.</span>
+    <span class="sy-header__tagline">WIR SIND AUF IHRER SEITE. UND AUF DER, DES NUTZERS.</span>
   </header>
 
   <div class="sy-section__content">
-    <h3 class="sy-headline sy-headline--content">We work with passion</h3>
+    <h3 class="sy-headline sy-headline--content">Voll transparent</h3>
     <p>
-      Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus.
+      Viele Agenturen schicken ihre besten Leute zum Kunden, im Hintergrund arbeiten aber dann ganz andere. Nicht bei uns: Die Leute, die sie kennenlernen, sind auch Ihr Team.
     </p>
   </div>
 
   <div class="sy-section__content">
-    <h3 class="sy-headline sy-headline--content">We do the right things and we do things right</h3>
+    <h3 class="sy-headline sy-headline--content">Immer individuell & effizient</h3>
     <p>
-      Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus.
+      Wir empfehlen Ihnen die Lösung, die für Ihr Unternehmen und für Ihre Nutzer am sinnvollsten ist – nicht das, was wir am besten verkaufen können, weil wir es schon in der Schublade haben. Trotzdem versuchen wir immer einen möglichst wirtschaftlichen Weg zu finden, Ihr Projekt zu realisieren.    </p>
+  </div>
+  <div class="sy-section__content">
+    <h3 class="sy-headline sy-headline--content">Absolut nachhaltig</h3>
+    <p>
+      Seien Sie sicher, dass es unser oberstes Ziel ist, fehlerfreie und sichere Services zu realisieren, die nicht in einem Jahr schon wieder überholt werden müssen. Dazu testen wir alle neuen Prototypen und Releases, um sie in wiederverwendbaren und erweiterbaren Pattern Libraries zu dokumentieren oder zu veröffentlichen.
     </p>
+  </div>
+  <div class="sy-section__content">
+    <h3 class="sy-headline sy-headline--content">Ständig up to date</h3>
+    <p>
+      Wir wissen was geht. Wir kennen jeden neuen Trend, jedes neue Tool und Framework. Wir arbeiten immer nach den neusten Standards und stellen trotzdem gleichzeitig sicher, dass alle ihre Kunden mit jedem Endgerät das bestmögliche Nutzererlebnis haben.    </p>
   </div>
 </section>
