--- a/app/partials/landingpage/meet-us.html
+++ b/app/partials/landingpage/meet-us.html
@@ -3,9 +3,10 @@
 
   <div class="sy-section__content">
     <p>
-        We love learning an networking at meetups and conferences. Here’s what’s up next for us:
+      Wir lieben es, Neues zu entdecken und Kontakte zu knüpfen. Dort sind wir demnächst:
     </p>
 
+    <!--
     <div class="sy-meetups">
       <div class="sy-meetups__item">
         <div class="sy-meetups__date">
@@ -41,10 +42,10 @@
         </div>
       </div>
     </div>
-
+  -->
     <p>
-      You know a great event we should be at, too?
-      <a href='#' class="sy-link">Send us a suggestion</a>
+      Sie haben ein Event für uns, das wir nicht verpassen sollten?  Oder Sie hätten gerne, dass wir auf Ihrem einen Vortrag halten? Machen wir gerne.
+      <a href='#' class="sy-link">Schreiben Sie uns.</a>
     </p>
   </div>
 </section>
