--- a/app/partials/landingpage/office.html
+++ b/app/partials/landingpage/office.html
@@ -11,10 +11,9 @@
     <div class="sy-grid sy-grid--two-cols">
       <div class="sy-column">
         <div class="sy-address">
-          <strong>Satellytes GmbH</strong><br>
-          Landwehrstraße 79a<br>
-          80336 München<br>
-          Tel. +49 89 45678912<br>
+          <strong>Satellytes Digital Consulting GmbH</strong><br>
+          Carola-Neher-Str. 10<br>
+          81379 München<br>
         </div>
       </div>
 
