added proper privacy content

--- a/app/partials/landingpage/what.html
+++ b/app/partials/landingpage/what.html
@@ -39,7 +39,8 @@
       <div  class="sy-services__item">
         <h4 class="sy-services__headline">Service Development</h4>
         <p class="sy-services__description">
-          Oft versuchen Unternehmen ihre analogen Services eins zu eins zu digitalisieren. Oder sie orientieren sich am Wettbewerb und wollen alles was die anderen auch haben – nur um auf Nummer Sicher zu gehen. Vielleicht ist das aber gar nicht das, was ihre Nutzer wollen. Wir gehen gerne mit Ihnen den Weg ab dem ersten Schritt und erarbeiten Services, die zu Ihren KPIs und Kunden passen.        </p>
+          Oft versuchen Unternehmen ihre analogen Services eins zu eins zu digitalisieren. Oder sie orientieren sich am Wettbewerb und wollen alles was die anderen auch haben – nur um auf Nummer Sicher zu gehen. Vielleicht ist das aber gar nicht das, was ihre Nutzer wollen. Wir gehen gerne mit Ihnen den Weg ab dem ersten Schritt und erarbeiten Services, die zu Ihren KPIs und Kunden passen.
+        </p>
       </div>
     </div>
   </div>
@@ -47,7 +48,8 @@
   <div class="sy-section__content">
     <h3 class="sy-headline sy-headline--content">Das können andere besser</h3>
     <p>
-      SEM, XR, E-Commerce, Werbung, Marketing, einfache Websites und vieles mehr. Durch unser breites und zuverlässges Netzwerk an Freelancern und Agenturen finden wir aber für alle Ihre Ansprüche immer eine perfekte Lösung. Beauftragen Sie uns und wir stellen Ihnen vollkommen transparent ein passendes Team zusammen.    </p>
+      SEM, XR, E-Commerce, Werbung, Marketing, einfache Websites und vieles mehr. Durch unser breites und zuverlässges Netzwerk an Freelancern und Agenturen finden wir aber für alle Ihre Ansprüche immer eine perfekte Lösung. Beauftragen Sie uns und wir stellen Ihnen vollkommen transparent ein passendes Team zusammen.
+    </p>
   </div>
 
   <div class="sy-section__content">
