--- a/app/partials/landingpage/why-us.html
+++ b/app/partials/landingpage/why-us.html
@@ -14,7 +14,8 @@
   <div class="sy-section__content">
     <h3 class="sy-headline sy-headline--content">Immer individuell & effizient</h3>
     <p>
-      Wir empfehlen Ihnen die Lösung, die für Ihr Unternehmen und für Ihre Nutzer am sinnvollsten ist – nicht das, was wir am besten verkaufen können, weil wir es schon in der Schublade haben. Trotzdem versuchen wir immer einen möglichst wirtschaftlichen Weg zu finden, Ihr Projekt zu realisieren.    </p>
+      Wir empfehlen Ihnen die Lösung, die für Ihr Unternehmen und für Ihre Nutzer am sinnvollsten ist – nicht das, was wir am besten verkaufen können, weil wir es schon in der Schublade haben. Trotzdem versuchen wir immer einen möglichst wirtschaftlichen Weg zu finden, Ihr Projekt zu realisieren.
+    </p>
   </div>
   <div class="sy-section__content">
     <h3 class="sy-headline sy-headline--content">Absolut nachhaltig</h3>
@@ -25,6 +26,7 @@
   <div class="sy-section__content">
     <h3 class="sy-headline sy-headline--content">Ständig up to date</h3>
     <p>
-      Wir wissen was geht. Wir kennen jeden neuen Trend, jedes neue Tool und Framework. Wir arbeiten immer nach den neusten Standards und stellen trotzdem gleichzeitig sicher, dass alle ihre Kunden mit jedem Endgerät das bestmögliche Nutzererlebnis haben.    </p>
+      Wir wissen was geht. Wir kennen jeden neuen Trend, jedes neue Tool und Framework. Wir arbeiten immer nach den neusten Standards und stellen trotzdem gleichzeitig sicher, dass alle ihre Kunden mit jedem Endgerät das bestmögliche Nutzererlebnis haben.
+    </p>
   </div>
 </section>
