--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -17,6 +17,7 @@
 @import "components/form";
 @import "components/button";
 @import "components/footer";
+@import "components/list";
 
 // page-specific styles
 @import "landingpage/index";
