--- a/app/partials/landingpage/meet-us.html
+++ b/app/partials/landingpage/meet-us.html
@@ -3,7 +3,7 @@
 
   <div class="sy-section__content">
     <p>
-      Wir lieben es, Neues zu entdecken und Kontakte zu knüpfen. Dort sind wir demnächst:
+      Wir lieben es, Neues zu entdecken und neue Kontakte zu knüpfen. Dort sind wir demnächst:
     </p>
 
     <!--
@@ -44,7 +44,7 @@
     </div>
   -->
     <p>
-      Sie haben ein Event für uns, das wir nicht verpassen sollten?  Oder Sie hätten gerne, dass wir auf Ihrem einen Vortrag halten? Machen wir gerne.
+      Sie haben ein Event für uns, das wir nicht verpassen sollten?  Oder Sie hätten gerne, dass wir auf Ihrem einen Vortrag halten? Machen wir gerne. Schreiben Sie uns.
       <a href='#' class="sy-link">Schreiben Sie uns.</a>
     </p>
   </div>
