--- a/app/partials/landingpage/what.html
+++ b/app/partials/landingpage/what.html
@@ -8,7 +8,7 @@
   <div class="sy-section__content">
     <h3 class="sy-headline sy-headline--content">Full Stack Digital Services</h3>
     <p>
-      Bei Satellytes dreht sich alles um die Optimierung digitaler Services und Interfaces. Als Full-Stack-Agentur bieten wir Ihnen den gesamten Prozess von der Ideation bis zur Implementierung – vom ersten perfomanten Funnel bis zur letzten Zeile Code. Auf gut deutsch:
+      Satellytes ist eine Digital-Agentur, die um große Unternehmen kreist und ihnen bei der Transformation und Optimierung digitaler Services und Interfaces hilft. Wir bieten „Full Stack“ an, also den gesamten Prozess von Ideation bis zur Implementierung des letzten performanten Funnels und der letzten Zeile wunderschönen Codes. Auf gut deutsch:
     </p>
 
   </div>
@@ -18,8 +18,17 @@
       <div  class="sy-services__item">
         <h4 class="sy-services__headline">UX/UI</h4>
         <p class="sy-services__description">
-          Mit rund 20 Jahren Erfahrung in der Konzeption und Umsetzung digitaler Interfaces kennen und können wir das gesamte Spektrum der User Experience (UX). Der kleine, sichtbare Teil davon ist das User Interface (UI), der große unsichtbare (UX) jedoch viel relevanter für die Erreichung ihrer wirtschaftlichen Ziele. Denn nur mit benutzerfreundlichen, leicht verständlichen Journeys über alle Endgeräte, Nutzergruppen und Nutzungskontexte hinweg, erreichen die User – und somit Sie – ihr Ziel.
-          </p>
+          Mit rund 20 Jahren Erfahrung in der Konzeption und Umsetzung digitaler Interfaces kennen und können wir das gesamte Spektrum der User Experience (UX). Der kleine, sichtbare Teil davon ist das User Interface (UI), der große unsichtbare (UX) jedoch viel relevanter für die Erreichung ihrer wirtschaftlichen Ziele. Denn nur mit benutzerfreundlichen, leicht verständlichen Journeys über alle Endgeräte, Nutzergruppen und Nutzungskontexte hinweg, erreichen die User und somit Sie ihr Ziel.
+          <ul class="sy-list sy-list--dashed">
+            <li class="sy-list__item">Informationsarchitektur (und Navigation)</li>
+            <li class="sy-list__item">Information/Content Design (Readability, Scanability, Consistency, Density, Sizes)</li>
+            <li class="sy-list__item">User Interface Design (Atomic Design, Pattern Libraries)</li>
+            <li class="sy-list__item">Interaction Design (Clarity, Ergonomy, Ease/Joy of Use)</li>
+            <li class="sy-list__item">Brand Experience</li>
+            <li class="sy-list__item">Accessibility (WAI)</li>
+            <li class="sy-list__item">Loading-, Responsive-Strategien, Performance</li>
+          </ul>
+        </p>
       </div>
 
       <div  class="sy-services__item">
@@ -39,7 +48,7 @@
       <div  class="sy-services__item">
         <h4 class="sy-services__headline">Service Development</h4>
         <p class="sy-services__description">
-          Oft versuchen Unternehmen ihre analogen Services eins zu eins zu digitalisieren. Oder sie orientieren sich am Wettbewerb und wollen alles was die anderen auch haben – nur um auf Nummer Sicher zu gehen. Vielleicht ist das aber gar nicht das, was ihre Nutzer wollen. Wir gehen gerne mit Ihnen den Weg ab dem ersten Schritt und erarbeiten Services, die zu Ihren KPIs und Kunden passen.
+          Oft versuchen Unternehmen ihre analogen Services eins zu eins zu digitalisieren. Oder sie orientieren sich am Wettbewerb und wollen alles was die anderen auch haben – nur um auf Nummer sicher zu gehen. Vielleicht ist das aber gar nicht das was ihre Nutzer wollen? Wir gehen gerne mit Ihnen den Weg ab dem ersten Schritt und erarbeiten Services, die zu Ihren KPIs und Kunden passen.
         </p>
       </div>
     </div>
@@ -48,7 +57,7 @@
   <div class="sy-section__content">
     <h3 class="sy-headline sy-headline--content">Das können andere besser</h3>
     <p>
-      SEM, XR, E-Commerce, Werbung, Marketing, einfache Websites und vieles mehr. Durch unser breites und zuverlässges Netzwerk an Freelancern und Agenturen finden wir aber für alle Ihre Ansprüche immer eine perfekte Lösung. Beauftragen Sie uns und wir stellen Ihnen vollkommen transparent ein passendes Team zusammen.
+      SEM, XR, E-Commerce, Werbung, Marketing, einfache Websites und vieles mehr. Durch unser breites und zuverlässiges Netzwerk an Freelancern und Agenturen finden wir aber für alle Ihre Ansprüche immer eine perfekte Lösung. Beauftragen Sie uns und wir stellen Ihnen vollkommen transparent ein passendes Team zusammen.
     </p>
   </div>
 
