--- a/app/partials/landingpage/why-us.html
+++ b/app/partials/landingpage/why-us.html
@@ -5,28 +5,28 @@
   </header>
 
   <div class="sy-section__content">
-    <h3 class="sy-headline sy-headline--content">Voll transparent</h3>
+    <h3 class="sy-headline sy-headline--content">Transparent</h3>
     <p>
       Viele Agenturen schicken ihre besten Leute zum Kunden, im Hintergrund arbeiten aber dann ganz andere. Nicht bei uns: Die Leute, die sie kennenlernen, sind auch Ihr Team.
     </p>
   </div>
 
   <div class="sy-section__content">
-    <h3 class="sy-headline sy-headline--content">Immer individuell & effizient</h3>
+    <h3 class="sy-headline sy-headline--content">Individuell & effizient</h3>
     <p>
       Wir empfehlen Ihnen die Lösung, die für Ihr Unternehmen und für Ihre Nutzer am sinnvollsten ist – nicht das, was wir am besten verkaufen können, weil wir es schon in der Schublade haben. Trotzdem versuchen wir immer einen möglichst wirtschaftlichen Weg zu finden, Ihr Projekt zu realisieren.
     </p>
   </div>
   <div class="sy-section__content">
-    <h3 class="sy-headline sy-headline--content">Absolut nachhaltig</h3>
+    <h3 class="sy-headline sy-headline--content">Nachhaltig</h3>
     <p>
-      Seien Sie sicher, dass es unser oberstes Ziel ist, fehlerfreie und sichere Services zu realisieren, die nicht in einem Jahr schon wieder überholt werden müssen. Dazu testen wir alle neuen Prototypen und Releases, um sie in wiederverwendbaren und erweiterbaren Pattern Libraries zu dokumentieren oder zu veröffentlichen.
+      Seien Sie sicher, dass es unser oberstes Ziel ist, fehlerfreie und sicherste Services zu realisieren, die nicht in einem Jahr schon wieder überholt werden müssen. Dazu testen wir jeden neuen Prototypen und Release und dokumentieren und veröffentlichen dann stets alles in wiederverwendbaren und erweiterbaren Pattern Libraries.
     </p>
   </div>
   <div class="sy-section__content">
-    <h3 class="sy-headline sy-headline--content">Ständig up to date</h3>
+    <h3 class="sy-headline sy-headline--content">Up to date</h3>
     <p>
-      Wir wissen was geht. Wir kennen jeden neuen Trend, jedes neue Tool und Framework. Wir arbeiten immer nach den neusten Standards und stellen trotzdem gleichzeitig sicher, dass alle ihre Kunden mit jedem Endgerät das bestmögliche Nutzererlebnis haben.
+      Wir wissen was geht. Wir kennen jeden neuen Trend, jedes neue Tool und Framework. Wir arbeiten immer nach den neusten Standards und stellen trotzdem gleichzeitig sicher, dass alle Ihre Kunden mit jedem ihrer Endgeräte das bestmögliche Nutzererlebnis haben.
     </p>
   </div>
 </section>
