--- a/app/partials/landingpage/meet-us.html
+++ b/app/partials/landingpage/meet-us.html
@@ -44,8 +44,8 @@
     </div>
   -->
     <p>
-      Sie haben ein Event für uns, das wir nicht verpassen sollten?  Oder Sie hätten gerne, dass wir auf Ihrem einen Vortrag halten? Machen wir gerne. Schreiben Sie uns.
-      <a href='#' class="sy-link">Schreiben Sie uns.</a>
+      Sie haben ein Event für uns, das wir nicht verpassen sollten?  Oder Sie hätten gerne, dass wir auf Ihrem einen Vortrag halten? Machen wir gerne.
+      <a href='/#sy-contact'>Schreiben Sie uns.</a>
     </p>
   </div>
 </section>
