clicking on contact now actually scrolls to contact

--- a/app/partials/landingpage/contact.html
+++ b/app/partials/landingpage/contact.html
@@ -1,5 +1,4 @@
-<section class="sy-section">
-  <a name="sy-contact"></a>
+<section class="sy-section" id="sy-contact">
   <h2 class="sy-headline sy-headline--section">Contact</h2>
 
   <div class="sy-section__content">
