--- a/app/partials/landingpage/meet-us.html
+++ b/app/partials/landingpage/meet-us.html
@@ -45,7 +45,7 @@
   -->
     <p>
       Sie haben ein Event für uns, das wir nicht verpassen sollten?  Oder Sie hätten gerne, dass wir auf Ihrem einen Vortrag halten? Machen wir gerne.
-      <a href='/#sy-contact'>Schreiben Sie uns.</a>
+      <a href='/#sy-contact' class="sy-link">Schreiben Sie uns.</a>
     </p>
   </div>
 </section>
