--- a/app/partials/landingpage/contact.html
+++ b/app/partials/landingpage/contact.html
@@ -19,7 +19,7 @@
             <input class="sy-input" type="text" aria-label="Ihr Name" placeholder="Ihr Name" name="name" required aria-required="true" />
           </div>
           <div class="sy-formfield__postfix">
-              <img src="../../assets/images/icon-person.png"/>
+              <img src="../../assets/images/icon-person.png" alt="person-icon"/>
           </div>
         </div>
       </div>
@@ -33,20 +33,20 @@
           </div>
 
           <div class="sy-formfield__postfix">
-            <img src="../../assets/images/icon-mail.png"/>
+            <img src="../../assets/images/icon-mail.png" alt="mail-icon"/>
           </div>
         </div>
       </div>
 
       <div class="sy-formgroup">
         <div class="sy-formfield">
-          <textarea class="sy-input" aria-label="Ihre Nachricht an uns" placeholder="Ihre Nachricht an uns" name="message" required aria-required="true"></textarea>
+          <textarea class="sy-input" aria-label="Ihre Nachricht an uns" placeholder="Ihre Nachricht an uns" name="message" required="required"></textarea>
         </div>
       </div>
 
       <div class="sy-formgroup">
         <button class="sy-button sy-contact-form__submitt-button">Send</button>
       </div>
-    </div>
-  </form>
+    </form>
+  </div>
 </section>
