removed a few alts, added an alt

--- a/app/partials/landingpage/intro/mobile.html
+++ b/app/partials/landingpage/intro/mobile.html
@@ -1,8 +1,7 @@
 <div class="sy-intro-wrapper">
   <svg class="sy-intro__svg"
     preserveAspectRatio="xMidYMax slice"
-    viewBox="0 0 100 190" xmlns="http://www.w3.org/2000/svg"
-    alt="intro with logo, a lot of twinkle stars and a few shooting stars">
+    viewBox="0 0 100 190" xmlns="http://www.w3.org/2000/svg">
 
     <!-- Planet -->
     <g transform="translate(150, -150)">
