--- a/app/partials/landingpage/intro/large.html
+++ b/app/partials/landingpage/intro/large.html
@@ -1,8 +1,7 @@
 <div class="sy-intro-wrapper">
   <svg class="sy-intro__svg"
     preserveAspectRatio="xMidYMid slice"
-    viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg"
-    alt="intro with satellite orbiting around huge bright planet, a lot of twinkle stars and a few shooting stars">
+    viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
 
     <!-- Satellytes Logo -->
     <g transform="scale(0.5)" style="transform-origin: center;">
