converted png office map to jpg

--- a/app/partials/landingpage/office.html
+++ b/app/partials/landingpage/office.html
@@ -3,7 +3,7 @@
 
   <div class="sy-section__content">
     <a href="https://goo.gl/maps/oiTLtfp9LgR2" rel="noopener" target="_blank" class="sy-google-maps">
-      <img class="sy-image sy-image--full-width" alt="Karte unseres Office-Standortes" src="../../assets/images/office-map.png">
+      <img class="sy-image sy-image--full-width" alt="Karte unseres Office-Standortes" src="../../assets/images/office-map.jpg">
       <div class="sy-google-maps__info">In Maps öffnen</div>
     </a>
     <div class="sy-spacer"></div>
