--- a/app/styles/components/list.scss
+++ b/app/styles/components/list.scss
@@ -1,5 +1,6 @@
 .sy-list {
   counter-reset: list;
+  padding-left: 15px;
 }
 
 .sy-list__item {
@@ -21,6 +22,7 @@
 }
 
 .sy-list--lettered-right-parenthesis {
+  padding-left: 25px;
 
   > .sy-list__item {
     list-style: none;
@@ -36,10 +38,12 @@
 }
 
 .sy-list--headless {
+  padding-left: 0;
   list-style-type: none;
 }
 
 .sy-list--parenthesis {
+  padding-left: 30px;
 
   > .sy-list__item {
     list-style: none;
