fixed font in what-we-do-headline

--- a/app/partials/landingpage/what.html
+++ b/app/partials/landingpage/what.html
@@ -1,8 +1,7 @@
 <section class="sy-section sy-landingpage__what" id="sy-what">
   <header class="sy-header">
-      <!--<span class="sy-header__tagline">WIR BIETEN NUR AN, WAS WIR BESONDERS GUT KÖNNEN.</span>-->
-      <h2 class="sy-headline sy-headline--section">Wir bieten nur an, was wir besonders gut können.</h2>
-
+    <h2 class="sy-headline sy-headline--section">What we do</h2>
+    <span class="sy-header__tagline">Wir bieten nur an, was wir besonders gut können.</span>
   </header>
 
   <div class="sy-section__content">
@@ -10,7 +9,6 @@
     <p>
       Satellytes ist eine Digital-Agentur, die um große Unternehmen kreist und ihnen bei der Transformation und Optimierung digitaler Services und Interfaces hilft. Wir bieten „Full Stack“ an, also den gesamten Prozess von Ideation bis zur Implementierung des letzten performanten Funnels und der letzten Zeile wunderschönen Codes. Auf gut deutsch:
     </p>
-
   </div>
 
   <div class="sy-section__content">
