changed order of contact form and office map on desktop

--- a/app/styles/core/layout.scss
+++ b/app/styles/core/layout.scss
@@ -43,6 +43,12 @@
   }
 }
 
+.sy-grid__col--desktop-last {
+
+  @include media-breakpoint-up(md) {
+    order: 2;
+  }
+}
 
 .sy-grid--two-cols {
   display: flex;
